tests/flow_errors/module_not_found/error.txt
Error: 
    1 | use snot;
      |     ^^^^ Module `snot` not found or not readable error in module path: 
                         - tests/flow_errors/module_not_found/
                         - tremor-script/lib